<resources>
    <string name="app_name">Бесконечное Подземелье: Путь героя</string>
    <string name="your_achivments"> Ваши достижения </string>
    <string name="returned"> Вернуться </string>
    <string name="max_netvors"> Максимальный нетворс 10000$ </string>
    <string name="maxmaxnetvors"> Максимальный нетворс 5000$ </string>
    <string name="killedmobsmin"> монстров убито 10 </string>
    <string name="sredkilledmobs"> монстров убито 50 </string>
    <string name="maxkilledmobs"> монстров убито 100 </string>
    <string name="obsnetvors">Всего нетворса: </string>
    <string name="max_maxnetvors"> Максимальный нетворс 2000$ </string>
    <string name="exit"> Выход </string>
    <string name="person"> Персонаж </string>
    <string name="new_game"> Новая игра </string>
    <string name="goplay"> Продолжить игру </string>
    <string name="goloadplay"> Загрузить сохраненение </string>
    <string name="boss_xp_1000"> Здоровье босса: </string>
    <string name="attact"> Атаковать </string>
    <string name="catacomb"> Вы находитесь у входа в катакомбы </string>
    <string name="go_boss"> Пойти к боссу </string>
    <string name="easy_medium"> Пойти в обычный лабиринт </string>
    <string name="money"> Деньги:&#160; </string>
    <string name="level"> Уровень: 1</string>
    <string name="xit_points"> &#160;Кол-во жизни:&#160; </string>
    <string name="dehidration"> &#160;Голод: &#160;</string>
    <string name="determination"> &#160;Жажда:&#160; </string>
    <string name="settings"> Настройки </string>
    <string name="inventory"> Инвентарь </string>
    <string name="achivments"> Достижения </string>
    <string name="returnedmenu"> Вернуться в меню </string>
    <string name="you_die">Вы погибли </string>
    <string name="small_paek"> Купить маленький паёк за 50 </string>
    <string name="sred_paek"> Купить средний паёк за 100 </string>
    <string name="big_paek"> Купить большой паёк за 200 </string>
    <string name="smallbottle"> Купить маленькую бутылку воды за 50 </string>
    <string name="sredbottle"> Купить флягу за 100 </string>
    <string name="bigbottle"> Купить бутыль с водой за 200 </string>
    <string name="podz"> Пойти в подземелье </string>
    <string name="nachsnar"> Получить стартовое снаряжение </string>
    <string name="city"> Вы находитесь в городе </string>
    <string name="returnedhome"> Вернуться к дому </string>
    <string name="go_gildia"> Пойти в гильдию </string>
    <string name="goshop"> Пойти в магазин </string>
    <string name="homefind"> Обыскать дом </string>
    <string name="goautside"> Выйти на улицу </string>
    <string name="supplies"> Расходники </string>
    <string name="yoursnar"> Ваше снаряжение: </string>
    <string name="monstxitpoints"> Кол-во жизни у монстра: </string>
    <string name="gonext"> Пойди дальше </string>
    <string name="attactmob"> Атаковать </string>
    <string name="youhave"> У вас есть &#160;</string>
    <string name="gofoodotdel"> Пойти в отдел с продуктами </string>
    <string name="goweaponotdel"> Пойти в оружейний отдел </string>
    <string name="songs"> Звуки</string>
    <string name="savegame"> Сохранить игру </string>
    <string name="loadgame"> Загрузить игру </string>
    <string name="behindhome">Вы находитесь у входа в дом </string>
    <string name="goin"> Войти в него </string>
    <string name="gocity"> Идти в город </string>
    <string name="buyshield"> Улучшить щит 250 </string>
    <string name="buysword"> Улучшить меч 300 </string>
    <string name="buyclothes"> Укрепить одежду 250 </string>
    <string name="smallhillras"> Маленькое зелье восстановления 50 </string>
    <string name="sredhillras"> Среднее зелье востановления 100 </string>
    <string name="bighillras"> Большое зелье восстановления 200 </string>
    <string name="wingame"> Вы освободили город от постоянных атак монстров </string>
    <string name="menu"> Меню </string>
    <string name="netv"> Общая ценность:&#160; </string>
    <string name="dolar"> &#160;$ </string>
    <string name="maxnetvors2000"> Максимальное кол-во денег 2000$ </string>
    <string name="maxnetvors5000"> Максимальное кол-во денег 5000$ </string>
    <string name="maxnetvors10000"> Максимальное кол-во денег 10000$ </string>
    <string name="killed10mobs"> Убито 10 монстров </string>
    <string name="killed50mobs"> Убито 50 монстров </string>
    <string name="killed100mobs"> Убито 100 монстров </string>
    <string name="dontopen"> Не открыто </string>
    <string name="your_xit_points"> Ваше здоровье:&#160; </string>
    <string name="youhavecrat"> У вас:&#160; </string>
    <string name="small">&#160; маленьких &#160;</string>
    <string name="sred">&#160; средних &#160;</string>
    <string name="big">&#160; больших&#160; </string>
    <string name="winmonster"> Вы победили этого монстра </string>
    <string name="yoursnaruppgrade"> Ваше снаряжение улучшенно </string>
    <string name="lvl">&#160;lvl</string>
    <string name="sword"> Короткий меч&#160; </string>
    <string name="magagrt"> Магический артефакт&#160; </string>
    <string name="shield"> Круглый щит&#160; </string>
    <string name="boots"> Кожаные сапоги&#160; </string>
    <string name="nagr"> Нагрудник из кольчуги&#160;</string>
    <string name="loadsave"> Последнее сохранение загруженно успешно </string>
    <string name="nothing"> Вы ничего не нашли </string>
    <string name="money100"> Вы нашли 100 монет </string>
    <string name="money500"> Вы нашли 500 монет и 3 больших пайка </string>
    <string name="money5004"> Вы нашли 500 монет, 4 больших пайка и бутыль воды </string>
    <string name="savesuccesfull"> Сохранение успешно</string>
    <string name="yourarmoruppgrade"> Ваша защита увеличена на &#160;</string>
    <string name="yourdamageuppgrade"> Ваш урон увеличен на &#160;</string>
    <string name="smallhill"> Маленьких хилок:&#160; </string>
    <string name="sredhill"> Средних хилок: &#160;</string>
    <string name="bighill"> Больших хилок:&#160; </string>
    <string name="moneynow"> Деньги: &#160;</string>
    <string name="levelnow"> Уровень:&#160; </string>
    <string name="played"> Играть </string>
    <string name="bigbottles"> Больших бутылок:&#160; </string>
    <string name="flyg"> Фляг:&#160; </string>
    <string name="smallbottles"> Маленьких бутылок: &#160;</string>
    <string name="smallfoods"> Маленьких пайков &#160;</string>
    <string name="sredfoods"> Средних пайков &#160;</string>
    <string name="bigfoods"> Больших пайков &#160;</string>
    <string name="backtomenu"> Выйти в меню </string>
    <string name="nachsnarup"> Вы получили снаряжение короля. Теперь вы можете его улучшить в магазине. </string>
</resources>