<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="landscape"
    android:background="@drawable/magazin">
    <TextView
        android:id="@+id/moneyhave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/youhave"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:background="@color/white"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        android:gravity="right">
        <Button
            android:id="@+id/Return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/returned"/>
        <Button
            android:id="@+id/person"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/person"/>
        <Button
            android:id="@+id/foodotdel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/gofoodotdel"/>
        <Button
            android:id="@+id/weaponotdel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/goweaponotdel"/>
    </LinearLayout>

</FrameLayout>