<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/starthome">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:text="@string/behindhome"/>
    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="vertical">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/person"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:background="@drawable/buttoncolorstartgame"
            android:text="@string/person"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/go_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_margin="5dp"
            android:textColor="@color/white"
            android:background="@drawable/buttoncolorstartgame"
            android:text="@string/goin"/>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_margin="5dp"
            android:id="@+id/gocity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:background="@drawable/buttoncolorstartgame"
            android:text="@string/gocity"/>
    </LinearLayout>
</RelativeLayout>