<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/catacomb"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/catacomb"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/return4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:background="@drawable/button_color"
            android:layout_margin="5dp"
            android:textColor="@color/black"
            android:text="@string/returned"
            android:textSize="20sp"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/Boss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@drawable/button_color"
            android:layout_margin="5dp"
            android:textColor="@color/black"
            android:text="@string/go_boss"
            android:textSize="20sp" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/easyandmedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:background="@drawable/button_color"
            android:layout_margin="5dp"
            android:textColor="@color/black"
            android:text="@string/easy_medium"
            android:textSize="20sp"/>
    </LinearLayout>
</FrameLayout>