<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home2"
    android:orientation="vertical">
    <LinearLayout
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="right">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/person"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_color"
            android:layout_margin="5dp"
            android:textColor="@color/black"
            android:text="@string/person"
            android:textSize="20sp"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_color"
            android:layout_margin="5dp"
            android:textColor="@color/black"
            android:text="@string/homefind"
            android:textSize="20sp"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/Return3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_color"
            android:layout_margin="5dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="@string/goautside"/>
    </LinearLayout>
</FrameLayout>